static/main.css
body {
    padding: 0;
    margin: 0;
    overflow-x: hidden;
    transition: .5s;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

input {
    font-weight: bold;
    font-size: 16pt;
    border: none;
    outline: none;
}

.content {
    width: 95vw;
    margin: auto;
}

.tier-section {
    margin-bottom: 20px;
}

.tier-info {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 8px 0;
}

.tier-title {
    font-weight: bold;
    font-size: 18pt;
}

.tier-author {
    font-size: 12pt;
    color: rgba(0, 0, 0, 0.50);
}

.tier {
    width: 100%;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
    border: 2px solid black;
    user-select: none;
}

.tier>div:not(:first-child) {
    border-top: 2px solid black;
}

.row>.rank {
    border-right: 2px solid black;
}

.row {
    display: flex;
}

.rank {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 16pt;
    font-weight: bold;
    flex: 0 0 40px;
    padding: 30px;
}

.items {
    display: grid;
    grid-template-columns: repeat(auto-fill, 100px);
    flex: auto;
    min-height: 100px;
    background: #242424;
}

.item {
    display: block;
    max-width: 100px;
    max-height: 100px;
    user-select: none;
}

.S {
    background: #ff7676;
}

.A {
    background: #ffc48a;
}

.B {
    background: #ffe38d;
}

.C {
    background: #ffff8f;
}

.D {
    background: #c3ff89;
}

.F {
    background: #9df89d;
}

.G {
    background: #76f8f8;
}

.create-tier {
    display: flex;
    justify-content: center;
    margin-top: 20px;
}

.create-tier>div {
    width: 400px;
    padding: 15px;
    text-align: center;
    font-weight: bold;
    font-size: 14pt;
    border: 2px solid black;
    border-radius: 14px;
    cursor: pointer;
    transition: background-color .5s;
}

.create-tier>div:hover {
    background-color: rgba(0, 0, 0, 0.50);
}

.to-rank-label {
    width: 100%;
    position: relative;
    color: rgba(0, 0, 0, 0.50);
    font-size: 20pt;
    user-select: none;
}

.to-rank-label>div {
    position: absolute;
    right: 0;
    bottom: 0;
}

#to-rank {
    display: flex;
    flex-flow: row wrap;
    gap: 10px;
    min-height: 50px;
    padding: 10px;
    border: 5px dashed rgba(0, 0, 0, 0.50);
}

#to-rank-input {
    display: none;
}

.alert {
    position: fixed;
    left: 0;
    top: 0;
    width: 600px;
    overflow-wrap: break-word;
    border-radius: 5px;
    padding: 10px 15px;
    background-color: #1c73a5;
    z-index: 4;
    margin: 0 50%;
    transform: translateX(-50%);
    color: #f3f3f3;
    cursor: default;
    animation: alert 4s forwards;
}

.alert_content {
    position: relative;
    font-size: 18pt;
}

@keyframes alert {
    from {transform: translate(-50%,-100px)}
    10% {transform: translate(-50%,35px)}
    12% {transform: translate(-50%,37px)}
    16% {transform: translate(-50%,35px)}
    80% {transform: translate(-50%,35px)}
    85% {transform: translate(-50%,40px)}
    to {transform: translate(-50%,-100px)}
}

@media (max-width: 1000px) {
    .alert {
        width: 90vw;
    }
}

